tests/cases/variables/ok/array-dynamic-index.ari
fn main() -> i64 {
  let values: [i64, 3] = [2, 4, 8];
  let index = 1;
  values[index] + values[2]
}
