tests/cases/variables/errors/variables-tuple-pattern-arity.ari
fn main() -> i64 {
  let (left, right, extra) = (1, 2);
  return left + right + extra;
}
